--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,1 +1,7 @@
-//
+$main-bg: #000;
+$main-color: #DDD;
+$font-size-base: 16px;
+$button-padding: 10px;
+$button-border-width: 2px;
+
+$nav-width: 54px;
