--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,9 +1,83 @@
 @import "variables";
 @import "../../node_modules/font-awesome/scss/font-awesome";
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
-  font: 16px sans-serif;
-  background: #333;
-  color: lightgray;
+  font: $font-size-base sans-serif;
+  background: $main-bg;
+  color: $main-color;
+  overflow: hidden;
+}
+
+button {
+  margin: 0;
+  padding: 0;
+  background: lighten($main-bg, 10%);
+  border: none;
+  color: inherit;
+  outline: none;
+  vertical-align: top;
+  -webkit-appearance: none;
+
+  &:active {
+    opacity: .75;
+  }
+}
+
+#player {
+  display: none;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: calc(100% - #{$nav-width});
+  height: 100%;
+  z-index: 2;
+  background: black;
+}
+
+#files {
+  width: 100%;
+  height: 100vh;
+  font-size: 0;
+  overflow: hidden;
+}
+
+button.file {
+  font-size: $font-size-base;
+  width: 106px;
+  height: 80px;
+  background-position: center;
+  background-size: cover;
+}
+
+button.folder {
+  padding: 0 10px;
+
+  .label {
+    display: inline-block;
+    max-width: 100%;
+    font-size: 12px;
+    white-space: nowrap;
+    word-break: break-word;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+}
+
+#nav {
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: $nav-width;
+  height: 100vh;
+}
+
+button.nav {
+  width: 100%;
+  height: 16.666%;
+  font-size: 24px;
 }
