--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -71,9 +71,11 @@ button.folder {
 #nav {
   position: absolute;
   right: 0;
-  top: 0;
+  top: 50%;
   width: $nav-width;
-  height: 100vh;
+  height: 320px;
+  margin-top: -160px;
+  background-color: lighten($main-bg, 5%);
 }
 
 button.nav {
