--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -90,3 +90,70 @@ button.nav {
   height: 16.666%;
   font-size: 24px;
 }
+
+.modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  right: $nav-width;
+  bottom: 0;
+  left: 0;
+  z-index: 2;
+  padding: 20px;
+  background: $main-bg;
+}
+
+button.form-button {
+  padding: 10px 20px;
+  font-size: $font-size-base;
+
+  &[type=submit] {
+    background-color: #2233AA;
+  }
+}
+
+form {
+
+  .modal & {
+    max-width: 480px;
+    margin: 0 auto;
+  }
+
+  .form-group {
+
+    & + .form-group {
+      margin-top: 20px;
+    }
+
+    label {
+      display: block;
+    }
+
+    input[type=text],
+    input[type=url],
+    input[type=range],
+    textarea,
+    select {
+      width: 100%;
+      padding: 10px;
+      background: lighten($main-bg, 5%);
+      color: $main-color;
+      border: 1px solid lighten($main-bg, 10%);
+      border-radius: 0;
+    }
+
+    textarea {
+      resize: vertical;
+    }
+  }
+
+  .form-button {
+    margin-top: 20px;
+  }
+}
+
+.width-50 {
+  float: left;
+  width: 48%;
+  margin-right: 2%;
+}
