--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -35,17 +35,6 @@ button {
   }
 }
 
-#player {
-  display: none;
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: calc(100% - #{$nav-width});
-  height: 100%;
-  z-index: 2;
-  background: black;
-}
-
 #files {
   width: 100%;
   height: 100vh;
@@ -57,21 +46,27 @@ button.file {
   font-size: $font-size-base;
   width: 106px;
   height: 80px;
+  padding: 0 10px;
   background-position: center;
   background-size: cover;
-}
-
-button.folder {
-  padding: 0 10px;
 
   .label {
     display: inline-block;
     max-width: 100%;
     font-size: 12px;
-    white-space: nowrap;
     word-break: break-word;
     overflow: hidden;
     text-overflow: ellipsis;
+  }
+
+  .fa {
+    color: rgba(lighten($main-color, 50%), .5);
+  }
+}
+
+button.folder {
+  .label {
+    white-space: nowrap;
   }
 }
 
@@ -156,4 +151,11 @@ form {
   float: left;
   width: 48%;
   margin-right: 2%;
+}
+
+.message {
+  margin: 1em;
+  padding: 0.5em;
+  color: #000;
+  background-color: gold;
 }
