--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,7 @@
 @import "variables";
 @import "../../node_modules/font-awesome/scss/font-awesome";
+@import "loader-spinner";
+@import "range-slider";
 
 * {
   box-sizing: border-box;
@@ -86,6 +88,10 @@ button.nav {
   font-size: 24px;
 }
 
+.local button.nav:first-child {
+  margin-top: $nav-width;
+}
+
 .modal {
   display: none;
   position: fixed;
@@ -96,6 +102,25 @@ button.nav {
   z-index: 2;
   padding: 20px;
   background: $main-bg;
+  overflow: auto;
+
+  .loader-spinner {
+    display: none;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 2;
+    background-color: rgba(0,0,0,0.75);
+
+    .lds-ellipsis {
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      margin: -32px 0 0 -32px;
+    }
+  }
 }
 
 button.form-button {
@@ -118,6 +143,10 @@ form {
 
     & + .form-group {
       margin-top: 20px;
+    }
+
+    &.width-50 + .form-group.width-50 {
+      margin-top: 0;
     }
 
     label {
@@ -145,6 +174,7 @@ form {
   .form-button {
     margin-top: 20px;
   }
+
 }
 
 .width-50 {
@@ -153,9 +183,17 @@ form {
   margin-right: 2%;
 }
 
+.clearfix {
+  clear: both;
+}
+
 .message {
   margin: 1em;
   padding: 0.5em;
   color: #000;
   background-color: gold;
+}
+
+audio {
+  width: 100%;
 }
