--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -44,6 +44,11 @@ button {
   overflow: hidden;
 }
 
+.remote #files {
+  width: calc(100vw - #{$nav-width});
+  overflow: auto;
+}
+
 button.file {
   font-size: $font-size-base;
   width: 106px;
@@ -84,7 +89,7 @@ button.folder {
 
 button.nav {
   width: 100%;
-  height: 16.666%;
+  height: 20%;
   font-size: 24px;
 }
 
@@ -108,7 +113,7 @@ button.nav {
     bottom: 0;
     left: 0;
     z-index: 2;
-    background-color: rgba(0,0,0,0.75);
+    background-color: rgba(0, 0, 0, 0.75);
 
     .lds-ellipsis {
       position: absolute;
@@ -136,7 +141,7 @@ button.form-button {
   font-size: $font-size-base;
 
   &[type=submit] {
-    background-color: #2233AA;
+    background-color: $primary;
   }
 }
 
@@ -222,4 +227,24 @@ hr {
 code {
   font-size: $font-size-base * 0.75;
   color: rgba($main-color, .75);
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+  background: lighten($main-bg, 5%);
+}
+
+::-webkit-scrollbar-thumb {
+  background: lighten($main-bg, 20%);
+  border-radius: 0;
+  transition: background-color .3s ease;
+
+  &:hover {
+    background: $primary;
+  }
+}
+
+::-webkit-scrollbar-corner {
+  background: #000;
 }
